sdk-docs_versioned_docs/version-28.0.x/modules/Types/Types.md
---
id: "Types"
title: "Module: Types"
sidebar_label: "Types"
---

## Enumerations

- [AssetHoldersOrderBy](../../enums/Types/AssetHoldersOrderBy/AssetHoldersOrderBy.md)
- [AuthTypeEnum](../../enums/Types/AuthTypeEnum/AuthTypeEnum.md)
- [AuthorizationStatusEnum](../../enums/Types/AuthorizationStatusEnum/AuthorizationStatusEnum.md)
- [BalanceTypeEnum](../../enums/Types/BalanceTypeEnum/BalanceTypeEnum.md)
- [CallIdEnum](../../enums/Types/CallIdEnum/CallIdEnum.md)
- [ClaimScopeTypeEnum](../../enums/Types/ClaimScopeTypeEnum/ClaimScopeTypeEnum.md)
- [EventIdEnum](../../enums/Types/EventIdEnum/EventIdEnum.md)
- [ExtrinsicsOrderBy](../../enums/Types/ExtrinsicsOrderBy/ExtrinsicsOrderBy.md)
- [ModuleIdEnum](../../enums/Types/ModuleIdEnum/ModuleIdEnum.md)
- [MultiSigProposalVoteActionEnum](../../enums/Types/MultiSigProposalVoteActionEnum/MultiSigProposalVoteActionEnum.md)
- [NftHoldersOrderBy](../../enums/Types/NftHoldersOrderBy/NftHoldersOrderBy.md)
- [SettlementDirectionEnum](../../enums/Types/SettlementDirectionEnum/SettlementDirectionEnum.md)

## References

### AcceptPrimaryKeyRotationParams

Re-exports [AcceptPrimaryKeyRotationParams](../../interfaces/API/Procedures/Types/AcceptPrimaryKeyRotationParams/AcceptPrimaryKeyRotationParams.md)

___

### Account

Re-exports [Account](../API/Entities/Types/Types.md#account)

___

### AccountBalance

Re-exports [AccountBalance](../API/Entities/Account/Types/Types.md#accountbalance)

___

### AccountIdentityRelation

Re-exports [AccountIdentityRelation](../../enums/API/Entities/Account/Types/AccountIdentityRelation/AccountIdentityRelation.md)

___

### AccountKeyType

Re-exports [AccountKeyType](../../enums/API/Entities/Account/Types/AccountKeyType/AccountKeyType.md)

___

### AccountTypeInfo

Re-exports [AccountTypeInfo](../../interfaces/API/Entities/Account/Types/AccountTypeInfo/AccountTypeInfo.md)

___

### AccountWithSignature

Re-exports [AccountWithSignature](../../interfaces/API/Procedures/Types/AccountWithSignature/AccountWithSignature.md)

___

### AccreditedClaim

Re-exports [AccreditedClaim](../../interfaces/API/Entities/Types/AccreditedClaim/AccreditedClaim.md)

___

### ActiveEraInfo

Re-exports [ActiveEraInfo](../../interfaces/API/Entities/Account/Types/ActiveEraInfo/ActiveEraInfo.md)

___

### ActiveTransferRestrictions

Re-exports [ActiveTransferRestrictions](../../interfaces/API/Entities/Asset/Types/ActiveTransferRestrictions/ActiveTransferRestrictions.md)

___

### AddAssetRequirementParams

Re-exports [AddAssetRequirementParams](../../interfaces/API/Procedures/Types/AddAssetRequirementParams/AddAssetRequirementParams.md)

___

### AddAssetStatParams

Re-exports [AddAssetStatParams](../API/Procedures/Types/Types.md#addassetstatparams)

___

### AddClaimCountStatParams

Re-exports [AddClaimCountStatParams](../API/Procedures/Types/Types.md#addclaimcountstatparams)

___

### AddClaimPercentageStatParams

Re-exports [AddClaimPercentageStatParams](../API/Procedures/Types/Types.md#addclaimpercentagestatparams)

___

### AddClaimsParams

Re-exports [AddClaimsParams](../../interfaces/API/Procedures/Types/AddClaimsParams/AddClaimsParams.md)

___

### AddCountStatInput

Re-exports [AddCountStatInput](../../interfaces/API/Entities/Types/AddCountStatInput/AddCountStatInput.md)

___

### AddCountStatParams

Re-exports [AddCountStatParams](../API/Procedures/Types/Types.md#addcountstatparams)

___

### AddCountTransferRestrictionParams

Re-exports [AddCountTransferRestrictionParams](../API/Procedures/Types/Types.md#addcounttransferrestrictionparams)

___

### AddInstructionParams

Re-exports [AddInstructionParams](../API/Procedures/Types/Types.md#addinstructionparams)

___

### AddInstructionWithVenueIdParams

Re-exports [AddInstructionWithVenueIdParams](../API/Procedures/Types/Types.md#addinstructionwithvenueidparams)

___

### AddInstructionsParams

Re-exports [AddInstructionsParams](../../interfaces/API/Procedures/Types/AddInstructionsParams/AddInstructionsParams.md)

___

### AddInvestorUniquenessClaimParams

Re-exports [AddInvestorUniquenessClaimParams](../../interfaces/API/Procedures/Types/AddInvestorUniquenessClaimParams/AddInvestorUniquenessClaimParams.md)

___

### AddPercentageStatParams

Re-exports [AddPercentageStatParams](../API/Procedures/Types/Types.md#addpercentagestatparams)

___

### AddRelayerPayingKeyAuthorizationData

Re-exports [AddRelayerPayingKeyAuthorizationData](../API/Entities/Types/Types.md#addrelayerpayingkeyauthorizationdata)

___

### AddSecondaryAccountsParams

Re-exports [AddSecondaryAccountsParams](../../interfaces/API/Procedures/Types/AddSecondaryAccountsParams/AddSecondaryAccountsParams.md)

___

### AffiliateClaim

Re-exports [AffiliateClaim](../../interfaces/API/Entities/Types/AffiliateClaim/AffiliateClaim.md)

___

### AffirmAsMediatorParams

Re-exports [AffirmAsMediatorParams](../API/Procedures/Types/Types.md#affirmasmediatorparams)

___

### AffirmInstructionParams

Re-exports [AffirmInstructionParams](../API/Procedures/Types/Types.md#affirminstructionparams)

___

### AffirmationStatus

Re-exports [AffirmationStatus](../../enums/API/Entities/Instruction/Types/AffirmationStatus/AffirmationStatus.md)

___

### AgentWithGroup

Re-exports [AgentWithGroup](../../interfaces/API/Entities/Asset/Types/AgentWithGroup/AgentWithGroup.md)

___

### AllowIdentityToCreatePortfoliosParams

Re-exports [AllowIdentityToCreatePortfoliosParams](../API/Procedures/Types/Types.md#allowidentitytocreateportfoliosparams)

___

### AllowanceOperation

Re-exports [AllowanceOperation](../../enums/API/Procedures/Types/AllowanceOperation/AllowanceOperation.md)

___

### AnyJson

Re-exports [AnyJson](../API/Entities/MultiSigProposal/Types/Types.md#anyjson)

___

### ArrayTransactionArgument

Re-exports [ArrayTransactionArgument](../../interfaces/Base/Types/ArrayTransactionArgument/ArrayTransactionArgument.md)

___

### Asset

Re-exports [Asset](../API/Entities/Asset/Types/Types.md#asset)

___

### AssetBase

Re-exports [AssetBase](../../interfaces/API/Procedures/Types/AssetBase/AssetBase.md)

___

### AssetDetails

Re-exports [AssetDetails](../../interfaces/API/Entities/Asset/Types/AssetDetails/AssetDetails.md)

___

### AssetDocument

Re-exports [AssetDocument](../../interfaces/API/Entities/Asset/Types/AssetDocument/AssetDocument.md)

___

### AssetMediatorParams

Re-exports [AssetMediatorParams](../../interfaces/API/Procedures/Types/AssetMediatorParams/AssetMediatorParams.md)

___

### AssetStat

Re-exports [AssetStat](../../interfaces/API/Entities/Asset/Types/AssetStat/AssetStat.md)

___

### AssetWithGroup

Re-exports [AssetWithGroup](../../interfaces/API/Entities/Asset/Types/AssetWithGroup/AssetWithGroup.md)

___

### AttestPrimaryKeyRotationAuthorizationData

Re-exports [AttestPrimaryKeyRotationAuthorizationData](../API/Entities/Types/Types.md#attestprimarykeyrotationauthorizationdata)

___

### AttestPrimaryKeyRotationParams

Re-exports [AttestPrimaryKeyRotationParams](../../interfaces/API/Procedures/Types/AttestPrimaryKeyRotationParams/AttestPrimaryKeyRotationParams.md)

___

### Authorization

Re-exports [Authorization](../API/Entities/Types/Types.md#authorization)

___

### AuthorizationRequest

Re-exports [AuthorizationRequest](../API/Entities/Types/Types.md#authorizationrequest)

___

### AuthorizationType

Re-exports [AuthorizationType](../../enums/API/Entities/Types/AuthorizationType/AuthorizationType.md)

___

### Balance

Re-exports [Balance](../../interfaces/API/Entities/Account/Types/Balance/Balance.md)

___

### BaseHistoricAssetTransaction

Re-exports [BaseHistoricAssetTransaction](../../interfaces/API/Entities/Asset/Types/BaseHistoricAssetTransaction/BaseHistoricAssetTransaction.md)

___

### BecomeAgentAuthorizationData

Re-exports [BecomeAgentAuthorizationData](../API/Entities/Types/Types.md#becomeagentauthorizationdata)

___

### BlockedClaim

Re-exports [BlockedClaim](../../interfaces/API/Entities/Types/BlockedClaim/BlockedClaim.md)

___

### BondPolyxParams

Re-exports [BondPolyxParams](../../interfaces/API/Procedures/Types/BondPolyxParams/BondPolyxParams.md)

___

### BuyLockupClaim

Re-exports [BuyLockupClaim](../../interfaces/API/Entities/Types/BuyLockupClaim/BuyLockupClaim.md)

___

### CaCheckpointType

Re-exports [CaCheckpointType](../../enums/API/Entities/Asset/Fungible/Checkpoints/Types/CaCheckpointType/CaCheckpointType.md)

___

### CastBallotVoteParams

Re-exports [CastBallotVoteParams](../API/Procedures/Types/Types.md#castballotvoteparams)

___

### CddClaim

Re-exports [CddClaim](../../interfaces/API/Entities/Types/CddClaim/CddClaim.md)

___

### CddProviderRole

Re-exports [CddProviderRole](../../interfaces/API/Procedures/Types/CddProviderRole/CddProviderRole.md)

___

### CheckPermissionsResult

Re-exports [CheckPermissionsResult](../../interfaces/API/Entities/Types/CheckPermissionsResult/CheckPermissionsResult.md)

___

### CheckRolesResult

Re-exports [CheckRolesResult](../../interfaces/API/Entities/Types/CheckRolesResult/CheckRolesResult.md)

___

### Checkpoint

Re-exports [Checkpoint](../API/Entities/Types/Types.md#checkpoint)

___

### CheckpointSchedule

Re-exports [CheckpointSchedule](../API/Entities/Types/Types.md#checkpointschedule)

___

### CheckpointScheduleParams

Re-exports [CheckpointScheduleParams](../API/Entities/CheckpointSchedule/Types/Types.md#checkpointscheduleparams)

___

### CheckpointWithData

Re-exports [CheckpointWithData](../../interfaces/API/Entities/Types/CheckpointWithData/CheckpointWithData.md)

___

### ChildIdentity

Re-exports [ChildIdentity](../API/Entities/Types/Types.md#childidentity)

___

### ChildKeyWithAuth

Re-exports [ChildKeyWithAuth](../../interfaces/API/Procedures/Types/ChildKeyWithAuth/ChildKeyWithAuth.md)

___

### Claim

Re-exports [Claim](../API/Entities/Types/Types.md#claim)

___

### ClaimCountRestrictionValue

Re-exports [ClaimCountRestrictionValue](../../interfaces/API/Procedures/Types/ClaimCountRestrictionValue/ClaimCountRestrictionValue.md)

___

### ClaimCountStatInput

Re-exports [ClaimCountStatInput](../API/Entities/Types/Types.md#claimcountstatinput)

___

### ClaimCountTransferRestriction

Re-exports [ClaimCountTransferRestriction](../../interfaces/API/Entities/Types/ClaimCountTransferRestriction/ClaimCountTransferRestriction.md)

___

### ClaimCountTransferRestrictionInput

Re-exports [ClaimCountTransferRestrictionInput](../../interfaces/API/Procedures/Types/ClaimCountTransferRestrictionInput/ClaimCountTransferRestrictionInput.md)

___

### ClaimData

Re-exports [ClaimData](../../interfaces/API/Entities/Types/ClaimData/ClaimData.md)

___

### ClaimOperation

Re-exports [ClaimOperation](../../enums/API/Procedures/Types/ClaimOperation/ClaimOperation.md)

___

### ClaimPercentageRestrictionValue

Re-exports [ClaimPercentageRestrictionValue](../../interfaces/API/Procedures/Types/ClaimPercentageRestrictionValue/ClaimPercentageRestrictionValue.md)

___

### ClaimPercentageTransferRestriction

Re-exports [ClaimPercentageTransferRestriction](../../interfaces/API/Entities/Types/ClaimPercentageTransferRestriction/ClaimPercentageTransferRestriction.md)

___

### ClaimPercentageTransferRestrictionInput

Re-exports [ClaimPercentageTransferRestrictionInput](../../interfaces/API/Procedures/Types/ClaimPercentageTransferRestrictionInput/ClaimPercentageTransferRestrictionInput.md)

___

### ClaimScope

Re-exports [ClaimScope](../../interfaces/API/Entities/Types/ClaimScope/ClaimScope.md)

___

### ClaimStatValue

Re-exports [ClaimStatValue](../API/Entities/Asset/Types/Types.md#claimstatvalue)

___

### ClaimTarget

Re-exports [ClaimTarget](../../interfaces/API/Entities/Types/ClaimTarget/ClaimTarget.md)

___

### ClaimType

Re-exports [ClaimType](../../enums/API/Entities/Types/ClaimType/ClaimType.md)

___

### ClaimValue

Re-exports [ClaimValue](../API/Entities/Asset/Types/Types.md#claimvalue)

___

### CollectionKey

Re-exports [CollectionKey](../API/Entities/Asset/Types/Types.md#collectionkey)

___

### CollectionKeyInput

Re-exports [CollectionKeyInput](../API/Procedures/Types/Types.md#collectionkeyinput)

___

### ComplexTransactionArgument

Re-exports [ComplexTransactionArgument](../../interfaces/Base/Types/ComplexTransactionArgument/ComplexTransactionArgument.md)

___

### Compliance

Re-exports [Compliance](../../interfaces/API/Entities/Types/Compliance/Compliance.md)

___

### ComplianceRequirements

Re-exports [ComplianceRequirements](../../interfaces/API/Entities/Types/ComplianceRequirements/ComplianceRequirements.md)

___

### Condition

Re-exports [Condition](../API/Entities/Types/Types.md#condition)

___

### ConditionBase

Re-exports [ConditionBase](../../interfaces/API/Entities/Types/ConditionBase/ConditionBase.md)

___

### ConditionCompliance

Re-exports [ConditionCompliance](../../interfaces/API/Entities/Types/ConditionCompliance/ConditionCompliance.md)

___

### ConditionTarget

Re-exports [ConditionTarget](../../enums/API/Entities/Types/ConditionTarget/ConditionTarget.md)

___

### ConditionType

Re-exports [ConditionType](../../enums/API/Entities/Types/ConditionType/ConditionType.md)

___

### ConfigureDividendDistributionParams

Re-exports [ConfigureDividendDistributionParams](../../interfaces/API/Procedures/Types/ConfigureDividendDistributionParams/ConfigureDividendDistributionParams.md)

___

### ConnectParams

Re-exports [ConnectParams](../../interfaces/API/Client/Polymesh/ConnectParams/ConnectParams.md)

___

### ControllerTransferParams

Re-exports [ControllerTransferParams](../../interfaces/API/Procedures/Types/ControllerTransferParams/ControllerTransferParams.md)

___

### CorporateAction

Re-exports [CorporateAction](../API/Entities/Types/Types.md#corporateaction)

___

### CorporateActionDefaultConfig

Re-exports [CorporateActionDefaultConfig](../../interfaces/API/Entities/Asset/Fungible/CorporateActions/Types/CorporateActionDefaultConfig/CorporateActionDefaultConfig.md)

___

### CorporateActionKind

Re-exports [CorporateActionKind](../../enums/API/Entities/CorporateActionBase/Types/CorporateActionKind/CorporateActionKind.md)

___

### CorporateActionParams

Renames and re-exports [Params](../../interfaces/API/Entities/CorporateActionBase/Params/Params.md)

___

### CorporateActionTargets

Re-exports [CorporateActionTargets](../../interfaces/API/Entities/CorporateActionBase/Types/CorporateActionTargets/CorporateActionTargets.md)

___

### CorporateBallotParams

Re-exports [CorporateBallotParams](../API/Procedures/Types/Types.md#corporateballotparams)

___

### CorporateBallotWithDetails

Re-exports [CorporateBallotWithDetails](../../interfaces/API/Entities/Types/CorporateBallotWithDetails/CorporateBallotWithDetails.md)

___

### CountTransferRestriction

Re-exports [CountTransferRestriction](../../interfaces/API/Entities/Types/CountTransferRestriction/CountTransferRestriction.md)

___

### CountTransferRestrictionInput

Re-exports [CountTransferRestrictionInput](../../interfaces/API/Procedures/Types/CountTransferRestrictionInput/CountTransferRestrictionInput.md)

___

### CreateAssetParams

Re-exports [CreateAssetParams](../../interfaces/API/Procedures/Types/CreateAssetParams/CreateAssetParams.md)

___

### CreateAssetWithTickerParams

Re-exports [CreateAssetWithTickerParams](../../interfaces/API/Procedures/Types/CreateAssetWithTickerParams/CreateAssetWithTickerParams.md)

___

### CreateBallotParams

Re-exports [CreateBallotParams](../../interfaces/API/Procedures/Types/CreateBallotParams/CreateBallotParams.md)

___

### CreateCheckpointScheduleParams

Re-exports [CreateCheckpointScheduleParams](../../interfaces/API/Procedures/Types/CreateCheckpointScheduleParams/CreateCheckpointScheduleParams.md)

___

### CreateChildIdentitiesParams

Re-exports [CreateChildIdentitiesParams](../../interfaces/API/Procedures/Types/CreateChildIdentitiesParams/CreateChildIdentitiesParams.md)

___

### CreateChildIdentityParams

Re-exports [CreateChildIdentityParams](../../interfaces/API/Procedures/Types/CreateChildIdentityParams/CreateChildIdentityParams.md)

___

### CreateGroupParams

Re-exports [CreateGroupParams](../../interfaces/API/Procedures/Types/CreateGroupParams/CreateGroupParams.md)

___

### CreateMultiSigParams

Re-exports [CreateMultiSigParams](../../interfaces/API/Procedures/Types/CreateMultiSigParams/CreateMultiSigParams.md)

___

### CreateNftCollectionParams

Re-exports [CreateNftCollectionParams](../../interfaces/API/Procedures/Types/CreateNftCollectionParams/CreateNftCollectionParams.md)

___

### CreateTransactionBatchParams

Re-exports [CreateTransactionBatchParams](../../interfaces/API/Procedures/Types/CreateTransactionBatchParams/CreateTransactionBatchParams.md)

___

### CreateTransactionBatchProcedureMethod

Re-exports [CreateTransactionBatchProcedureMethod](../../interfaces/API/Procedures/Types/CreateTransactionBatchProcedureMethod/CreateTransactionBatchProcedureMethod.md)

___

### CreateVenueParams

Re-exports [CreateVenueParams](../../interfaces/API/Procedures/Types/CreateVenueParams/CreateVenueParams.md)

___

### CustomClaim

Re-exports [CustomClaim](../../interfaces/API/Entities/Types/CustomClaim/CustomClaim.md)

___

### CustomClaimType

Re-exports [CustomClaimType](../API/Client/Types/Types.md#customclaimtype)

___

### CustomClaimTypeWithDid

Re-exports [CustomClaimTypeWithDid](../API/Client/Types/Types.md#customclaimtypewithdid)

___

### CustomClaimWithoutScope

Re-exports [CustomClaimWithoutScope](../API/Entities/Types/Types.md#customclaimwithoutscope)

___

### CustomPermissionGroup

Re-exports [CustomPermissionGroup](../API/Entities/Types/Types.md#custompermissiongroup)

___

### DecreaseAllowanceParams

Re-exports [DecreaseAllowanceParams](../../interfaces/API/Procedures/Types/DecreaseAllowanceParams/DecreaseAllowanceParams.md)

___

### DefaultPortfolio

Re-exports [DefaultPortfolio](../API/Entities/Types/Types.md#defaultportfolio)

___

### DefaultTrustedClaimIssuer

Re-exports [DefaultTrustedClaimIssuer](../API/Entities/Types/Types.md#defaulttrustedclaimissuer)

___

### DistributionParticipant

Re-exports [DistributionParticipant](../../interfaces/API/Entities/DividendDistribution/Types/DistributionParticipant/DistributionParticipant.md)

___

### DistributionPayment

Re-exports [DistributionPayment](../../interfaces/API/Entities/Types/DistributionPayment/DistributionPayment.md)

___

### DistributionWithDetails

Re-exports [DistributionWithDetails](../../interfaces/API/Entities/Types/DistributionWithDetails/DistributionWithDetails.md)

___

### DividendDistribution

Re-exports [DividendDistribution](../API/Entities/Types/Types.md#dividenddistribution)

___

### DividendDistributionDetails

Re-exports [DividendDistributionDetails](../../interfaces/API/Entities/DividendDistribution/Types/DividendDistributionDetails/DividendDistributionDetails.md)

___

### DividendDistributionParams

Re-exports [DividendDistributionParams](../../interfaces/API/Entities/DividendDistribution/DividendDistributionParams/DividendDistributionParams.md)

___

### EditClaimsParams

Re-exports [EditClaimsParams](../../interfaces/API/Procedures/Types/EditClaimsParams/EditClaimsParams.md)

___

### ErrorCode

Re-exports [ErrorCode](../../enums/API/Client/Types/ErrorCode/ErrorCode.md)

___

### EventIdentifier

Re-exports [EventIdentifier](../../interfaces/API/Client/Types/EventIdentifier/EventIdentifier.md)

___

### ExecuteManualInstructionParams

Re-exports [ExecuteManualInstructionParams](../../interfaces/API/Procedures/Types/ExecuteManualInstructionParams/ExecuteManualInstructionParams.md)

___

### ExemptedClaim

Re-exports [ExemptedClaim](../../interfaces/API/Entities/Types/ExemptedClaim/ExemptedClaim.md)

___

### ExternalAgentCondition

Re-exports [ExternalAgentCondition](../../interfaces/API/Entities/Types/ExternalAgentCondition/ExternalAgentCondition.md)

___

### ExtrinsicData

Re-exports [ExtrinsicData](../../interfaces/API/Client/Types/ExtrinsicData/ExtrinsicData.md)

___

### ExtrinsicDataWithFees

Re-exports [ExtrinsicDataWithFees](../../interfaces/API/Client/Types/ExtrinsicDataWithFees/ExtrinsicDataWithFees.md)

___

### Fees

Re-exports [Fees](../../interfaces/API/Client/Types/Fees/Fees.md)

___

### FungibleAsset

Re-exports [FungibleAsset](../API/Entities/Types/Types.md#fungibleasset)

___

### FungibleLeg

Re-exports [FungibleLeg](../../interfaces/API/Entities/Instruction/Types/FungibleLeg/FungibleLeg.md)

___

### FungiblePortfolioMovement

Re-exports [FungiblePortfolioMovement](../../interfaces/API/Entities/Types/FungiblePortfolioMovement/FungiblePortfolioMovement.md)

___

### GenericAuthorizationData

Re-exports [GenericAuthorizationData](../API/Entities/Types/Types.md#genericauthorizationdata)

___

### GenericPolymeshTransaction

Re-exports [GenericPolymeshTransaction](../API/Procedures/Types/Types.md#genericpolymeshtransaction)

___

### GlobalCollectionKeyInput

Re-exports [GlobalCollectionKeyInput](../../interfaces/API/Procedures/Types/GlobalCollectionKeyInput/GlobalCollectionKeyInput.md)

___

### GlobalMetadataKey

Re-exports [GlobalMetadataKey](../API/Entities/MetadataEntry/Types/Types.md#globalmetadatakey)

___

### GroupPermissions

Re-exports [GroupPermissions](../API/Entities/Types/Types.md#grouppermissions)

___

### GroupedInstructions

Re-exports [GroupedInstructions](../../interfaces/API/Entities/Instruction/Types/GroupedInstructions/GroupedInstructions.md)

___

### GroupedInvolvedInstructions

Re-exports [GroupedInvolvedInstructions](../../interfaces/API/Entities/Instruction/Types/GroupedInvolvedInstructions/GroupedInvolvedInstructions.md)

___

### HeldNfts

Re-exports [HeldNfts](../../interfaces/API/Entities/Asset/Types/HeldNfts/HeldNfts.md)

___

### HistoricAgentOperation

Re-exports [HistoricAgentOperation](../../interfaces/API/Entities/Asset/Types/HistoricAgentOperation/HistoricAgentOperation.md)

___

### HistoricAssetTransaction

Re-exports [HistoricAssetTransaction](../../interfaces/API/Entities/Asset/Types/HistoricAssetTransaction/HistoricAssetTransaction.md)

___

### HistoricInstruction

Re-exports [HistoricInstruction](../API/Entities/Venue/Types/Types.md#historicinstruction)

___

### HistoricNftTransaction

Re-exports [HistoricNftTransaction](../../interfaces/API/Entities/Asset/Types/HistoricNftTransaction/HistoricNftTransaction.md)

___

### HistoricPolyxTransaction

Re-exports [HistoricPolyxTransaction](../../interfaces/API/Entities/Account/Types/HistoricPolyxTransaction/HistoricPolyxTransaction.md)

___

### HistoricSettlement

Re-exports [HistoricSettlement](../../interfaces/API/Entities/Portfolio/Types/HistoricSettlement/HistoricSettlement.md)

___

### HistoricalInstructionFilters

Re-exports [HistoricalInstructionFilters](../../interfaces/API/Client/Types/HistoricalInstructionFilters/HistoricalInstructionFilters.md)

___

### HistoricalMultiSigProposal

Re-exports [HistoricalMultiSigProposal](../../interfaces/API/Entities/Account/MultiSig/Types/HistoricalMultiSigProposal/HistoricalMultiSigProposal.md)

___

### Identity

Re-exports [Identity](../API/Entities/Types/Types.md#identity)

___

### IdentityBalance

Re-exports [IdentityBalance](../../interfaces/API/Entities/Asset/Types/IdentityBalance/IdentityBalance.md)

___

### IdentityCondition

Re-exports [IdentityCondition](../../interfaces/API/Entities/Types/IdentityCondition/IdentityCondition.md)

___

### IdentityHeldNfts

Re-exports [IdentityHeldNfts](../../interfaces/API/Entities/Asset/Types/IdentityHeldNfts/IdentityHeldNfts.md)

___

### IdentityRole

Re-exports [IdentityRole](../../interfaces/API/Procedures/Types/IdentityRole/IdentityRole.md)

___

### IdentityWithClaims

Re-exports [IdentityWithClaims](../../interfaces/API/Entities/Types/IdentityWithClaims/IdentityWithClaims.md)

___

### ImmortalProcedureOptValue

Re-exports [ImmortalProcedureOptValue](../../interfaces/API/Procedures/Types/ImmortalProcedureOptValue/ImmortalProcedureOptValue.md)

___

### IncreaseAllowanceParams

Re-exports [IncreaseAllowanceParams](../../interfaces/API/Procedures/Types/IncreaseAllowanceParams/IncreaseAllowanceParams.md)

___

### InitiateCorporateActionParams

Re-exports [InitiateCorporateActionParams](../API/Procedures/Types/Types.md#initiatecorporateactionparams)

___

### InputCaCheckpoint

Re-exports [InputCaCheckpoint](../API/Entities/Asset/Fungible/Checkpoints/Types/Types.md#inputcacheckpoint)

___

### InputCondition

Re-exports [InputCondition](../API/Entities/Types/Types.md#inputcondition)

___

### InputConditionBase

Re-exports [InputConditionBase](../API/Entities/Types/Types.md#inputconditionbase)

___

### InputCorporateActionTargets

Re-exports [InputCorporateActionTargets](../API/Procedures/Types/Types.md#inputcorporateactiontargets)

___

### InputCorporateActionTaxWithholdings

Re-exports [InputCorporateActionTaxWithholdings](../API/Procedures/Types/Types.md#inputcorporateactiontaxwithholdings)

___

### InputRequirement

Re-exports [InputRequirement](../API/Entities/Types/Types.md#inputrequirement)

___

### InputStatClaim

Re-exports [InputStatClaim](../API/Entities/Types/Types.md#inputstatclaim)

___

### InputStatType

Re-exports [InputStatType](../API/Entities/Types/Types.md#inputstattype)

___

### InputTargets

Re-exports [InputTargets](../API/Entities/CorporateActionBase/Types/Types.md#inputtargets)

___

### InputTaxWithholding

Re-exports [InputTaxWithholding](../API/Entities/CorporateActionBase/Types/Types.md#inputtaxwithholding)

___

### InputTrustedClaimIssuer

Re-exports [InputTrustedClaimIssuer](../API/Entities/Types/Types.md#inputtrustedclaimissuer)

___

### Instruction

Re-exports [Instruction](../API/Entities/Types/Types.md#instruction)

___

### InstructionAffirmation

Re-exports [InstructionAffirmation](../../interfaces/API/Entities/Instruction/Types/InstructionAffirmation/InstructionAffirmation.md)

___

### InstructionAffirmationOperation

Re-exports [InstructionAffirmationOperation](../../enums/API/Procedures/Types/InstructionAffirmationOperation/InstructionAffirmationOperation.md)

___

### InstructionDetails

Re-exports [InstructionDetails](../API/Entities/Instruction/Types/Types.md#instructiondetails)

___

### InstructionEndCondition

Re-exports [InstructionEndCondition](../API/Entities/Instruction/Types/Types.md#instructionendcondition)

___

### InstructionFungibleLeg

Re-exports [InstructionFungibleLeg](../../interfaces/API/Procedures/Types/InstructionFungibleLeg/InstructionFungibleLeg.md)

___

### InstructionIdParams

Re-exports [InstructionIdParams](../../interfaces/API/Procedures/Types/InstructionIdParams/InstructionIdParams.md)

___

### InstructionLeg

Re-exports [InstructionLeg](../API/Procedures/Types/Types.md#instructionleg)

___

### InstructionLockedInfo

Re-exports [InstructionLockedInfo](../../interfaces/API/Entities/Instruction/Types/InstructionLockedInfo/InstructionLockedInfo.md)

___

### InstructionNftLeg

Re-exports [InstructionNftLeg](../../interfaces/API/Procedures/Types/InstructionNftLeg/InstructionNftLeg.md)

___

### InstructionOffChainLeg

Re-exports [InstructionOffChainLeg](../../interfaces/API/Procedures/Types/InstructionOffChainLeg/InstructionOffChainLeg.md)

___

### InstructionStatus

Re-exports [InstructionStatus](../../enums/API/Entities/Instruction/Types/InstructionStatus/InstructionStatus.md)

___

### InstructionStatusEnum

Re-exports [InstructionStatusEnum](../../enums/API/Client/Types/InstructionStatusEnum/InstructionStatusEnum.md)

___

### InstructionStatusResult

Re-exports [InstructionStatusResult](../API/Entities/Instruction/Types/Types.md#instructionstatusresult)

___

### InstructionType

Re-exports [InstructionType](../../enums/API/Entities/Instruction/Types/InstructionType/InstructionType.md)

___

### InstructionsByStatus

Re-exports [InstructionsByStatus](../API/Entities/Instruction/Types/Types.md#instructionsbystatus)

___

### InvestInOfferingParams

Re-exports [InvestInOfferingParams](../../interfaces/API/Procedures/Types/InvestInOfferingParams/InvestInOfferingParams.md)

___

### Investment

Re-exports [Investment](../../interfaces/API/Entities/Offering/Types/Investment/Investment.md)

___

### InviteAccountParams

Re-exports [InviteAccountParams](../../interfaces/API/Procedures/Types/InviteAccountParams/InviteAccountParams.md)

___

### InviteExternalAgentParams

Re-exports [InviteExternalAgentParams](../../interfaces/API/Procedures/Types/InviteExternalAgentParams/InviteExternalAgentParams.md)

___

### IssueNftParams

Re-exports [IssueNftParams](../API/Procedures/Types/Types.md#issuenftparams)

___

### IssueTokensParams

Re-exports [IssueTokensParams](../../interfaces/API/Procedures/Types/IssueTokensParams/IssueTokensParams.md)

___

### JoinIdentityAuthorizationData

Re-exports [JoinIdentityAuthorizationData](../API/Entities/Types/Types.md#joinidentityauthorizationdata)

___

### JurisdictionClaim

Re-exports [JurisdictionClaim](../../interfaces/API/Entities/Types/JurisdictionClaim/JurisdictionClaim.md)

___

### JurisdictionValue

Re-exports [JurisdictionValue](../API/Entities/Asset/Types/Types.md#jurisdictionvalue)

___

### KnownAssetType

Re-exports [KnownAssetType](../../enums/API/Entities/Asset/Types/KnownAssetType/KnownAssetType.md)

___

### KnownNftType

Re-exports [KnownNftType](../../enums/API/Entities/Asset/Types/KnownNftType/KnownNftType.md)

___

### KnownPermissionGroup

Re-exports [KnownPermissionGroup](../API/Entities/Types/Types.md#knownpermissiongroup)

___

### KycClaim

Re-exports [KycClaim](../../interfaces/API/Entities/Types/KycClaim/KycClaim.md)

___

### LaunchOfferingParams

Re-exports [LaunchOfferingParams](../../interfaces/API/Procedures/Types/LaunchOfferingParams/LaunchOfferingParams.md)

___

### Leg

Re-exports [Leg](../API/Entities/Instruction/Types/Types.md#leg)

___

### LinkCaDocsParams

Re-exports [LinkCaDocsParams](../../interfaces/API/Procedures/Types/LinkCaDocsParams/LinkCaDocsParams.md)

___

### LinkTickerToAssetParams

Re-exports [LinkTickerToAssetParams](../../interfaces/API/Procedures/Types/LinkTickerToAssetParams/LinkTickerToAssetParams.md)

___

### LocalCollectionKeyInput

Re-exports [LocalCollectionKeyInput](../../interfaces/API/Procedures/Types/LocalCollectionKeyInput/LocalCollectionKeyInput.md)

___

### MapTxData

Re-exports [MapTxData](../Base/Types/Types.md#maptxdata)

___

### MediatorAffirmation

Re-exports [MediatorAffirmation](../API/Entities/Instruction/Types/Types.md#mediatoraffirmation)

___

### MetadataDetails

Re-exports [MetadataDetails](../../interfaces/API/Entities/MetadataEntry/Types/MetadataDetails/MetadataDetails.md)

___

### MetadataEntry

Re-exports [MetadataEntry](../API/Entities/Types/Types.md#metadataentry)

___

### MetadataKeyId

Re-exports [MetadataKeyId](../API/Entities/Asset/Types/Types.md#metadatakeyid)

___

### MetadataLockStatus

Re-exports [MetadataLockStatus](../../enums/API/Entities/MetadataEntry/Types/MetadataLockStatus/MetadataLockStatus.md)

___

### MetadataSpec

Re-exports [MetadataSpec](../../interfaces/API/Entities/MetadataEntry/Types/MetadataSpec/MetadataSpec.md)

___

### MetadataType

Re-exports [MetadataType](../../enums/API/Entities/MetadataEntry/Types/MetadataType/MetadataType.md)

___

### MetadataValue

Re-exports [MetadataValue](../API/Entities/MetadataEntry/Types/Types.md#metadatavalue)

___

### MetadataValueDetails

Re-exports [MetadataValueDetails](../API/Entities/MetadataEntry/Types/Types.md#metadatavaluedetails)

___

### MetadataWithValue

Re-exports [MetadataWithValue](../API/Entities/MetadataEntry/Types/Types.md#metadatawithvalue)

___

### MiddlewareConfig

Re-exports [MiddlewareConfig](../../interfaces/API/Client/Types/MiddlewareConfig/MiddlewareConfig.md)

___

### MiddlewareMetadata

Re-exports [MiddlewareMetadata](../../interfaces/API/Client/Types/MiddlewareMetadata/MiddlewareMetadata.md)

___

### MiddlewarePaginationOptions

Re-exports [MiddlewarePaginationOptions](../../interfaces/API/Entities/Types/MiddlewarePaginationOptions/MiddlewarePaginationOptions.md)

___

### ModifyAssetParams

Re-exports [ModifyAssetParams](../API/Procedures/Types/Types.md#modifyassetparams)

___

### ModifyAssetTrustedClaimIssuersAddSetParams

Re-exports [ModifyAssetTrustedClaimIssuersAddSetParams](../../interfaces/API/Procedures/Types/ModifyAssetTrustedClaimIssuersAddSetParams/ModifyAssetTrustedClaimIssuersAddSetParams.md)

___

### ModifyAssetTrustedClaimIssuersRemoveParams

Re-exports [ModifyAssetTrustedClaimIssuersRemoveParams](../../interfaces/API/Procedures/Types/ModifyAssetTrustedClaimIssuersRemoveParams/ModifyAssetTrustedClaimIssuersRemoveParams.md)

___

### ModifyCaCheckpointParams

Re-exports [ModifyCaCheckpointParams](../../interfaces/API/Procedures/Types/ModifyCaCheckpointParams/ModifyCaCheckpointParams.md)

___

### ModifyCaDefaultConfigParams

Re-exports [ModifyCaDefaultConfigParams](../API/Procedures/Types/Types.md#modifycadefaultconfigparams)

___

### ModifyClaimsParams

Re-exports [ModifyClaimsParams](../API/Procedures/Types/Types.md#modifyclaimsparams)

___

### ModifyComplianceRequirementParams

Re-exports [ModifyComplianceRequirementParams](../API/Procedures/Types/Types.md#modifycompliancerequirementparams)

___

### ModifyCorporateActionsAgentParams

Re-exports [ModifyCorporateActionsAgentParams](../../interfaces/API/Procedures/Types/ModifyCorporateActionsAgentParams/ModifyCorporateActionsAgentParams.md)

___

### ModifyCorporateBallotParams

Re-exports [ModifyCorporateBallotParams](../API/Procedures/Types/Types.md#modifycorporateballotparams)

___

### ModifyInstructionAffirmationParams

Re-exports [ModifyInstructionAffirmationParams](../API/Procedures/Types/Types.md#modifyinstructionaffirmationparams)

___

### ModifyMultiSigParams

Re-exports [ModifyMultiSigParams](../../interfaces/API/Procedures/Types/ModifyMultiSigParams/ModifyMultiSigParams.md)

___

### ModifyOfferingTimesParams

Re-exports [ModifyOfferingTimesParams](../API/Procedures/Types/Types.md#modifyofferingtimesparams)

___

### ModifyPrimaryIssuanceAgentParams

Re-exports [ModifyPrimaryIssuanceAgentParams](../../interfaces/API/Procedures/Types/ModifyPrimaryIssuanceAgentParams/ModifyPrimaryIssuanceAgentParams.md)

___

### ModifySignerPermissionsParams

Re-exports [ModifySignerPermissionsParams](../../interfaces/API/Procedures/Types/ModifySignerPermissionsParams/ModifySignerPermissionsParams.md)

___

### ModifyVenueParams

Re-exports [ModifyVenueParams](../API/Procedures/Types/Types.md#modifyvenueparams)

___

### MortalProcedureOptValue

Re-exports [MortalProcedureOptValue](../../interfaces/API/Procedures/Types/MortalProcedureOptValue/MortalProcedureOptValue.md)

___

### MortalityProcedureOpt

Re-exports [MortalityProcedureOpt](../API/Procedures/Types/Types.md#mortalityprocedureopt)

___

### MoveFundsParams

Re-exports [MoveFundsParams](../../interfaces/API/Procedures/Types/MoveFundsParams/MoveFundsParams.md)

___

### MultiClaimCondition

Re-exports [MultiClaimCondition](../../interfaces/API/Entities/Types/MultiClaimCondition/MultiClaimCondition.md)

___

### MultiSig

Re-exports [MultiSig](../API/Entities/Types/Types.md#multisig)

___

### MultiSigDetails

Re-exports [MultiSigDetails](../../interfaces/API/Entities/Account/MultiSig/Types/MultiSigDetails/MultiSigDetails.md)

___

### MultiSigProcedureOpt

Re-exports [MultiSigProcedureOpt](../../interfaces/API/Procedures/Types/MultiSigProcedureOpt/MultiSigProcedureOpt.md)

___

### MultiSigProposal

Re-exports [MultiSigProposal](../API/Entities/Types/Types.md#multisigproposal)

___

### MultiSigProposalAction

Re-exports [MultiSigProposalAction](../../enums/API/Entities/MultiSigProposal/Types/MultiSigProposalAction/MultiSigProposalAction.md)

___

### MultiSigProposalDetails

Re-exports [MultiSigProposalDetails](../../interfaces/API/Entities/MultiSigProposal/Types/MultiSigProposalDetails/MultiSigProposalDetails.md)

___

### MultiSigProposalVote

Re-exports [MultiSigProposalVote](../API/Entities/MultiSigProposal/Types/Types.md#multisigproposalvote)

___

### MultiSigSigners

Re-exports [MultiSigSigners](../../interfaces/API/Entities/Account/MultiSig/Types/MultiSigSigners/MultiSigSigners.md)

___

### NetworkProperties

Re-exports [NetworkProperties](../../interfaces/API/Client/Types/NetworkProperties/NetworkProperties.md)

___

### NewStatType

Re-exports [NewStatType](../../enums/API/Entities/Types/NewStatType/NewStatType.md)

___

### NextKey

Re-exports [NextKey](../API/Entities/Types/Types.md#nextkey)

___

### Nft

Re-exports [Nft](../API/Entities/Types/Types.md#nft)

___

### NftCollection

Re-exports [NftCollection](../API/Entities/Types/Types.md#nftcollection)

___

### NftControllerTransferParams

Re-exports [NftControllerTransferParams](../../interfaces/API/Procedures/Types/NftControllerTransferParams/NftControllerTransferParams.md)

___

### NftLeg

Re-exports [NftLeg](../../interfaces/API/Entities/Instruction/Types/NftLeg/NftLeg.md)

___

### NftMetadata

Re-exports [NftMetadata](../../interfaces/API/Entities/Asset/Types/NftMetadata/NftMetadata.md)

___

### NftMetadataInput

Re-exports [NftMetadataInput](../API/Procedures/Types/Types.md#nftmetadatainput)

___

### NoArgsProcedureMethod

Re-exports [NoArgsProcedureMethod](../../interfaces/API/Procedures/Types/NoArgsProcedureMethod/NoArgsProcedureMethod.md)

___

### NominateValidatorsParams

Re-exports [NominateValidatorsParams](../../interfaces/API/Procedures/Types/NominateValidatorsParams/NominateValidatorsParams.md)

___

### NonFungiblePortfolioMovement

Re-exports [NonFungiblePortfolioMovement](../API/Entities/Types/Types.md#nonfungibleportfoliomovement)

___

### NumberedPortfolio

Re-exports [NumberedPortfolio](../API/Entities/Types/Types.md#numberedportfolio)

___

### OffChainAffirmation

Re-exports [OffChainAffirmation](../../interfaces/API/Entities/Instruction/Types/OffChainAffirmation/OffChainAffirmation.md)

___

### OffChainAffirmationReceipt

Re-exports [OffChainAffirmationReceipt](../../interfaces/API/Procedures/Types/OffChainAffirmationReceipt/OffChainAffirmationReceipt.md)

___

### OffChainLeg

Re-exports [OffChainLeg](../../interfaces/API/Entities/Instruction/Types/OffChainLeg/OffChainLeg.md)

___

### OffChainSignature

Re-exports [OffChainSignature](../../interfaces/API/Procedures/Types/OffChainSignature/OffChainSignature.md)

___

### Offering

Re-exports [Offering](../API/Entities/Types/Types.md#offering)

___

### OfferingBalanceStatus

Re-exports [OfferingBalanceStatus](../../enums/API/Entities/Offering/Types/OfferingBalanceStatus/OfferingBalanceStatus.md)

___

### OfferingDetails

Re-exports [OfferingDetails](../../interfaces/API/Entities/Offering/Types/OfferingDetails/OfferingDetails.md)

___

### OfferingSaleStatus

Re-exports [OfferingSaleStatus](../../enums/API/Entities/Offering/Types/OfferingSaleStatus/OfferingSaleStatus.md)

___

### OfferingStatus

Re-exports [OfferingStatus](../../interfaces/API/Entities/Offering/Types/OfferingStatus/OfferingStatus.md)

___

### OfferingTier

Re-exports [OfferingTier](../../interfaces/API/Entities/Offering/Types/OfferingTier/OfferingTier.md)

___

### OfferingTimingStatus

Re-exports [OfferingTimingStatus](../../enums/API/Entities/Offering/Types/OfferingTimingStatus/OfferingTimingStatus.md)

___

### OfferingWithDetails

Re-exports [OfferingWithDetails](../../interfaces/API/Entities/Types/OfferingWithDetails/OfferingWithDetails.md)

___

### OptionalArgsProcedureMethod

Re-exports [OptionalArgsProcedureMethod](../../interfaces/API/Procedures/Types/OptionalArgsProcedureMethod/OptionalArgsProcedureMethod.md)

___

### PaginationOptions

Re-exports [PaginationOptions](../../interfaces/API/Entities/Types/PaginationOptions/PaginationOptions.md)

___

### PayDividendsParams

Re-exports [PayDividendsParams](../../interfaces/API/Procedures/Types/PayDividendsParams/PayDividendsParams.md)

___

### PayingAccount

Re-exports [PayingAccount](../Base/Types/Types.md#payingaccount)

___

### PayingAccountFees

Re-exports [PayingAccountFees](../../interfaces/Base/Types/PayingAccountFees/PayingAccountFees.md)

___

### PayingAccountType

Re-exports [PayingAccountType](../../enums/Base/Types/PayingAccountType/PayingAccountType.md)

___

### PercentageTransferRestriction

Re-exports [PercentageTransferRestriction](../../interfaces/API/Entities/Types/PercentageTransferRestriction/PercentageTransferRestriction.md)

___

### PercentageTransferRestrictionInput

Re-exports [PercentageTransferRestrictionInput](../../interfaces/API/Procedures/Types/PercentageTransferRestrictionInput/PercentageTransferRestrictionInput.md)

___

### PermissionGroupType

Re-exports [PermissionGroupType](../../enums/API/Entities/Types/PermissionGroupType/PermissionGroupType.md)

___

### PermissionGroups

Re-exports [PermissionGroups](../../interfaces/API/Entities/Types/PermissionGroups/PermissionGroups.md)

___

### PermissionType

Re-exports [PermissionType](../../enums/API/Entities/Types/PermissionType/PermissionType.md)

___

### PermissionedAccount

Re-exports [PermissionedAccount](../../interfaces/API/Entities/Types/PermissionedAccount/PermissionedAccount.md)

___

### Permissions

Re-exports [Permissions](../../interfaces/API/Entities/Types/Permissions/Permissions.md)

___

### PermissionsLike

Re-exports [PermissionsLike](../API/Entities/Types/Types.md#permissionslike)

___

### PlainTransactionArgument

Re-exports [PlainTransactionArgument](../../interfaces/Base/Types/PlainTransactionArgument/PlainTransactionArgument.md)

___

### PolkadotConfig

Re-exports [PolkadotConfig](../../interfaces/API/Client/Types/PolkadotConfig/PolkadotConfig.md)

___

### PolymeshError

Re-exports [PolymeshError](../Base/Types/Types.md#polymesherror)

___

### PolymeshTransaction

Re-exports [PolymeshTransaction](../Base/Types/Types.md#polymeshtransaction)

___

### PolymeshTransactionBatch

Re-exports [PolymeshTransactionBatch](../Base/Types/Types.md#polymeshtransactionbatch)

___

### PortfolioBalance

Re-exports [PortfolioBalance](../../interfaces/API/Entities/Portfolio/Types/PortfolioBalance/PortfolioBalance.md)

___

### PortfolioCollection

Re-exports [PortfolioCollection](../../interfaces/API/Entities/Portfolio/Types/PortfolioCollection/PortfolioCollection.md)

___

### PortfolioCustodianRole

Re-exports [PortfolioCustodianRole](../../interfaces/API/Procedures/Types/PortfolioCustodianRole/PortfolioCustodianRole.md)

___

### PortfolioCustodyAuthorizationData

Re-exports [PortfolioCustodyAuthorizationData](../API/Entities/Types/Types.md#portfoliocustodyauthorizationdata)

___

### PortfolioId

Re-exports [PortfolioId](../../interfaces/API/Procedures/Types/PortfolioId/PortfolioId.md)

___

### PortfolioLike

Re-exports [PortfolioLike](../API/Entities/Types/Types.md#portfoliolike)

___

### PortfolioMovement

Re-exports [PortfolioMovement](../API/Entities/Types/Types.md#portfoliomovement)

___

### ProcedureAuthorizationStatus

Re-exports [ProcedureAuthorizationStatus](../../interfaces/API/Procedures/Types/ProcedureAuthorizationStatus/ProcedureAuthorizationStatus.md)

___

### ProcedureMethod

Re-exports [ProcedureMethod](../../interfaces/API/Procedures/Types/ProcedureMethod/ProcedureMethod.md)

___

### ProcedureOpts

Re-exports [ProcedureOpts](../../interfaces/API/Procedures/Types/ProcedureOpts/ProcedureOpts.md)

___

### ProposalStatus

Re-exports [ProposalStatus](../../enums/API/Entities/MultiSigProposal/Types/ProposalStatus/ProposalStatus.md)

___

### ProtocolFees

Re-exports [ProtocolFees](../../interfaces/API/Client/Types/ProtocolFees/ProtocolFees.md)

___

### RedeemNftParams

Re-exports [RedeemNftParams](../../interfaces/API/Procedures/Types/RedeemNftParams/RedeemNftParams.md)

___

### RedeemTokensParams

Re-exports [RedeemTokensParams](../../interfaces/API/Procedures/Types/RedeemTokensParams/RedeemTokensParams.md)

___

### RegisterCustomAssetTypeParams

Re-exports [RegisterCustomAssetTypeParams](../../interfaces/API/Procedures/Types/RegisterCustomAssetTypeParams/RegisterCustomAssetTypeParams.md)

___

### RegisterCustomClaimTypeParams

Re-exports [RegisterCustomClaimTypeParams](../../interfaces/API/Procedures/Types/RegisterCustomClaimTypeParams/RegisterCustomClaimTypeParams.md)

___

### RegisterIdentityParams

Re-exports [RegisterIdentityParams](../../interfaces/API/Procedures/Types/RegisterIdentityParams/RegisterIdentityParams.md)

___

### RegisterMetadataParams

Re-exports [RegisterMetadataParams](../API/Procedures/Types/Types.md#registermetadataparams)

___

### RejectInstructionParams

Re-exports [RejectInstructionParams](../API/Procedures/Types/Types.md#rejectinstructionparams)

___

### RemoveAssetRequirementParams

Re-exports [RemoveAssetRequirementParams](../../interfaces/API/Procedures/Types/RemoveAssetRequirementParams/RemoveAssetRequirementParams.md)

___

### RemoveCheckpointScheduleParams

Re-exports [RemoveCheckpointScheduleParams](../../interfaces/API/Procedures/Types/RemoveCheckpointScheduleParams/RemoveCheckpointScheduleParams.md)

___

### RemoveCorporateActionParams

Re-exports [RemoveCorporateActionParams](../../interfaces/API/Procedures/Types/RemoveCorporateActionParams/RemoveCorporateActionParams.md)

___

### RemoveExternalAgentParams

Re-exports [RemoveExternalAgentParams](../../interfaces/API/Procedures/Types/RemoveExternalAgentParams/RemoveExternalAgentParams.md)

___

### RemoveSecondaryAccountsParams

Re-exports [RemoveSecondaryAccountsParams](../../interfaces/API/Procedures/Types/RemoveSecondaryAccountsParams/RemoveSecondaryAccountsParams.md)

___

### RenamePortfolioParams

Re-exports [RenamePortfolioParams](../../interfaces/API/Procedures/Types/RenamePortfolioParams/RenamePortfolioParams.md)

___

### Requirement

Re-exports [Requirement](../../interfaces/API/Entities/Types/Requirement/Requirement.md)

___

### RequirementCompliance

Re-exports [RequirementCompliance](../../interfaces/API/Entities/Types/RequirementCompliance/RequirementCompliance.md)

___

### ReserveTickerParams

Re-exports [ReserveTickerParams](../../interfaces/API/Procedures/Types/ReserveTickerParams/ReserveTickerParams.md)

___

### ResultSet

Re-exports [ResultSet](../../interfaces/API/Entities/Types/ResultSet/ResultSet.md)

___

### RevokeClaimsParams

Re-exports [RevokeClaimsParams](../../interfaces/API/Procedures/Types/RevokeClaimsParams/RevokeClaimsParams.md)

___

### RevokeIdentityToCreatePortfoliosParams

Re-exports [RevokeIdentityToCreatePortfoliosParams](../API/Procedures/Types/Types.md#revokeidentitytocreateportfoliosparams)

___

### Role

Re-exports [Role](../API/Procedures/Types/Types.md#role)

___

### RoleType

Re-exports [RoleType](../../enums/API/Procedures/Types/RoleType/RoleType.md)

___

### RotatePrimaryKeyAuthorizationData

Re-exports [RotatePrimaryKeyAuthorizationData](../API/Entities/Types/Types.md#rotateprimarykeyauthorizationdata)

___

### RotatePrimaryKeyParams

Re-exports [RotatePrimaryKeyParams](../../interfaces/API/Procedures/Types/RotatePrimaryKeyParams/RotatePrimaryKeyParams.md)

___

### RotatePrimaryKeyToSecondaryData

Re-exports [RotatePrimaryKeyToSecondaryData](../API/Entities/Types/Types.md#rotateprimarykeytosecondarydata)

___

### RotatePrimaryKeyToSecondaryParams

Re-exports [RotatePrimaryKeyToSecondaryParams](../API/Procedures/Types/Types.md#rotateprimarykeytosecondaryparams)

___

### ScheduleDetails

Re-exports [ScheduleDetails](../../interfaces/API/Entities/CheckpointSchedule/Types/ScheduleDetails/ScheduleDetails.md)

___

### ScheduleWithDetails

Re-exports [ScheduleWithDetails](../../interfaces/API/Entities/Types/ScheduleWithDetails/ScheduleWithDetails.md)

___

### Scope

Re-exports [Scope](../../interfaces/API/Entities/Types/Scope/Scope.md)

___

### ScopeClaimProof

Re-exports [ScopeClaimProof](../../interfaces/API/Procedures/Types/ScopeClaimProof/ScopeClaimProof.md)

___

### ScopeType

Re-exports [ScopeType](../../enums/API/Entities/Types/ScopeType/ScopeType.md)

___

### ScopedClaim

Re-exports [ScopedClaim](../API/Entities/Types/Types.md#scopedclaim)

___

### SectionPermissions

Re-exports [SectionPermissions](../../interfaces/API/Entities/Types/SectionPermissions/SectionPermissions.md)

___

### SecurityIdentifier

Re-exports [SecurityIdentifier](../../interfaces/API/Entities/Asset/Types/SecurityIdentifier/SecurityIdentifier.md)

___

### SecurityIdentifierType

Re-exports [SecurityIdentifierType](../../enums/API/Entities/Asset/Types/SecurityIdentifierType/SecurityIdentifierType.md)

___

### SellLockupClaim

Re-exports [SellLockupClaim](../../interfaces/API/Entities/Types/SellLockupClaim/SellLockupClaim.md)

___

### SetAllowanceParams

Re-exports [SetAllowanceParams](../../interfaces/API/Procedures/Types/SetAllowanceParams/SetAllowanceParams.md)

___

### SetAssetDocumentsParams

Re-exports [SetAssetDocumentsParams](../../interfaces/API/Procedures/Types/SetAssetDocumentsParams/SetAssetDocumentsParams.md)

___

### SetAssetRequirementsParams

Re-exports [SetAssetRequirementsParams](../../interfaces/API/Procedures/Types/SetAssetRequirementsParams/SetAssetRequirementsParams.md)

___

### SetClaimCountTransferRestrictionsParams

Re-exports [SetClaimCountTransferRestrictionsParams](../../interfaces/API/Procedures/Types/SetClaimCountTransferRestrictionsParams/SetClaimCountTransferRestrictionsParams.md)

___

### SetClaimPercentageTransferRestrictionsParams

Re-exports [SetClaimPercentageTransferRestrictionsParams](../../interfaces/API/Procedures/Types/SetClaimPercentageTransferRestrictionsParams/SetClaimPercentageTransferRestrictionsParams.md)

___

### SetCountTransferRestrictionsParams

Re-exports [SetCountTransferRestrictionsParams](../../interfaces/API/Procedures/Types/SetCountTransferRestrictionsParams/SetCountTransferRestrictionsParams.md)

___

### SetCustodianParams

Re-exports [SetCustodianParams](../../interfaces/API/Procedures/Types/SetCustodianParams/SetCustodianParams.md)

___

### SetGroupPermissionsParams

Re-exports [SetGroupPermissionsParams](../../interfaces/API/Procedures/Types/SetGroupPermissionsParams/SetGroupPermissionsParams.md)

___

### SetMetadataParams

Re-exports [SetMetadataParams](../API/Procedures/Types/Types.md#setmetadataparams)

___

### SetMultiSigAdminParams

Re-exports [SetMultiSigAdminParams](../../interfaces/API/Procedures/Types/SetMultiSigAdminParams/SetMultiSigAdminParams.md)

___

### SetPermissionGroupParams

Re-exports [SetPermissionGroupParams](../../interfaces/API/Procedures/Types/SetPermissionGroupParams/SetPermissionGroupParams.md)

___

### SetStakingControllerParams

Re-exports [SetStakingControllerParams](../../interfaces/API/Procedures/Types/SetStakingControllerParams/SetStakingControllerParams.md)

___

### SetStakingPayeeParams

Re-exports [SetStakingPayeeParams](../../interfaces/API/Procedures/Types/SetStakingPayeeParams/SetStakingPayeeParams.md)

___

### SetTransferRestrictionParams

Re-exports [SetTransferRestrictionParams](../API/Procedures/Types/Types.md#settransferrestrictionparams)

___

### SetTransferRestrictionStatParams

Re-exports [SetTransferRestrictionStatParams](../API/Procedures/Types/Types.md#settransferrestrictionstatparams)

___

### SetVenueFilteringParams

Re-exports [SetVenueFilteringParams](../API/Procedures/Types/Types.md#setvenuefilteringparams)

___

### SettlementLeg

Re-exports [SettlementLeg](../API/Entities/Portfolio/Types/Types.md#settlementleg)

___

### SettlementResultEnum

Renames and re-exports [InstructionStatusEnum](../../enums/API/Client/Types/InstructionStatusEnum/InstructionStatusEnum.md)

___

### Signer

Re-exports [Signer](../API/Entities/Types/Types.md#signer)

___

### SignerKeyRingType

Re-exports [SignerKeyRingType](../../enums/API/Procedures/Types/SignerKeyRingType/SignerKeyRingType.md)

___

### SignerType

Re-exports [SignerType](../../enums/API/Entities/Types/SignerType/SignerType.md)

___

### SignerValue

Re-exports [SignerValue](../../interfaces/API/Entities/Types/SignerValue/SignerValue.md)

___

### SimpleEnumTransactionArgument

Re-exports [SimpleEnumTransactionArgument](../../interfaces/Base/Types/SimpleEnumTransactionArgument/SimpleEnumTransactionArgument.md)

___

### SimplePermissions

Re-exports [SimplePermissions](../../interfaces/API/Entities/Types/SimplePermissions/SimplePermissions.md)

___

### SingleClaimCondition

Re-exports [SingleClaimCondition](../../interfaces/API/Entities/Types/SingleClaimCondition/SingleClaimCondition.md)

___

### SkipChecksOpt

Re-exports [SkipChecksOpt](../../interfaces/API/Procedures/Types/SkipChecksOpt/SkipChecksOpt.md)

___

### StakingCommission

Re-exports [StakingCommission](../../interfaces/API/Entities/Account/Types/StakingCommission/StakingCommission.md)

___

### StakingEraInfo

Re-exports [StakingEraInfo](../../interfaces/API/Client/Types/StakingEraInfo/StakingEraInfo.md)

___

### StakingLedger

Re-exports [StakingLedger](../../interfaces/API/Entities/Account/Types/StakingLedger/StakingLedger.md)

___

### StakingNomination

Re-exports [StakingNomination](../../interfaces/API/Entities/Account/Types/StakingNomination/StakingNomination.md)

___

### StakingPayee

Re-exports [StakingPayee](../../interfaces/API/Entities/Account/Types/StakingPayee/StakingPayee.md)

___

### StakingUnlockingEntry

Re-exports [StakingUnlockingEntry](../../interfaces/API/Entities/Account/Types/StakingUnlockingEntry/StakingUnlockingEntry.md)

___

### StatAccreditedClaimInput

Re-exports [StatAccreditedClaimInput](../../interfaces/API/Entities/Types/StatAccreditedClaimInput/StatAccreditedClaimInput.md)

___

### StatAffiliateClaimInput

Re-exports [StatAffiliateClaimInput](../../interfaces/API/Entities/Types/StatAffiliateClaimInput/StatAffiliateClaimInput.md)

___

### StatClaimIssuer

Re-exports [StatClaimIssuer](../../interfaces/API/Entities/Types/StatClaimIssuer/StatClaimIssuer.md)

___

### StatClaimType

Re-exports [StatClaimType](../API/Entities/Types/Types.md#statclaimtype)

___

### StatJurisdictionClaimInput

Re-exports [StatJurisdictionClaimInput](../../interfaces/API/Entities/Types/StatJurisdictionClaimInput/StatJurisdictionClaimInput.md)

___

### StatType

Re-exports [StatType](../../enums/API/Entities/Types/StatType/StatType.md)

___

### SubCallback

Re-exports [SubCallback](../API/Entities/Types/Types.md#subcallback)

___

### SubmissionDetails

Re-exports [SubmissionDetails](../../interfaces/API/Client/Types/SubmissionDetails/SubmissionDetails.md)

___

### SubsidizeAccountParams

Re-exports [SubsidizeAccountParams](../../interfaces/API/Procedures/Types/SubsidizeAccountParams/SubsidizeAccountParams.md)

___

### Subsidy

Re-exports [Subsidy](../API/Entities/Types/Types.md#subsidy)

___

### SubsidyData

Re-exports [SubsidyData](../../interfaces/API/Entities/Subsidy/Types/SubsidyData/SubsidyData.md)

___

### SubsidyWithAllowance

Re-exports [SubsidyWithAllowance](../../interfaces/API/Entities/Subsidy/Types/SubsidyWithAllowance/SubsidyWithAllowance.md)

___

### TargetTreatment

Re-exports [TargetTreatment](../../enums/API/Entities/CorporateActionBase/Types/TargetTreatment/TargetTreatment.md)

___

### TaxWithholding

Re-exports [TaxWithholding](../../interfaces/API/Entities/CorporateActionBase/Types/TaxWithholding/TaxWithholding.md)

___

### TickerOwnerRole

Re-exports [TickerOwnerRole](../../interfaces/API/Procedures/Types/TickerOwnerRole/TickerOwnerRole.md)

___

### TickerReservation

Re-exports [TickerReservation](../API/Entities/Types/Types.md#tickerreservation)

___

### TickerReservationDetails

Re-exports [TickerReservationDetails](../API/Entities/TickerReservation/Types/Types.md#tickerreservationdetails)

___

### TickerReservationStatus

Re-exports [TickerReservationStatus](../../enums/API/Entities/TickerReservation/Types/TickerReservationStatus/TickerReservationStatus.md)

___

### Tier

Re-exports [Tier](../../interfaces/API/Entities/Offering/Types/Tier/Tier.md)

___

### TransactionArgument

Re-exports [TransactionArgument](../Base/Types/Types.md#transactionargument)

___

### TransactionArgumentType

Re-exports [TransactionArgumentType](../../enums/Base/Types/TransactionArgumentType/TransactionArgumentType.md)

___

### TransactionArray

Re-exports [TransactionArray](../API/Procedures/Types/Types.md#transactionarray)

___

### TransactionPayload

Re-exports [TransactionPayload](../../interfaces/Base/Types/TransactionPayload/TransactionPayload.md)

___

### TransactionPayloadInput

Re-exports [TransactionPayloadInput](../Base/Types/Types.md#transactionpayloadinput)

___

### TransactionPermissions

Re-exports [TransactionPermissions](../../interfaces/API/Entities/Types/TransactionPermissions/TransactionPermissions.md)

___

### TransactionStatus

Re-exports [TransactionStatus](../../enums/Base/Types/TransactionStatus/TransactionStatus.md)

___

### TransactionsParams

Re-exports [TransactionsParams](../../interfaces/API/Procedures/Types/TransactionsParams/TransactionsParams.md)

___

### TransferAssetOwnershipParams

Re-exports [TransferAssetOwnershipParams](../../interfaces/API/Procedures/Types/TransferAssetOwnershipParams/TransferAssetOwnershipParams.md)

___

### TransferBreakdown

Re-exports [TransferBreakdown](../../interfaces/API/Entities/Asset/Types/TransferBreakdown/TransferBreakdown.md)

___

### TransferError

Re-exports [TransferError](../../enums/API/Entities/Asset/Types/TransferError/TransferError.md)

___

### TransferExemptKey

Re-exports [TransferExemptKey](../../interfaces/API/Entities/Asset/Types/TransferExemptKey/TransferExemptKey.md)

___

### TransferPolyxParams

Re-exports [TransferPolyxParams](../../interfaces/API/Procedures/Types/TransferPolyxParams/TransferPolyxParams.md)

___

### TransferRestriction

Re-exports [TransferRestriction](../API/Procedures/Types/Types.md#transferrestriction)

___

### TransferRestrictionClaimCountInput

Re-exports [TransferRestrictionClaimCountInput](../../interfaces/API/Procedures/Types/TransferRestrictionClaimCountInput/TransferRestrictionClaimCountInput.md)

___

### TransferRestrictionExemption

Re-exports [TransferRestrictionExemption](../../interfaces/API/Entities/Asset/Types/TransferRestrictionExemption/TransferRestrictionExemption.md)

___

### TransferRestrictionExemptionParams

Re-exports [TransferRestrictionExemptionParams](../API/Procedures/Types/Types.md#transferrestrictionexemptionparams)

___

### TransferRestrictionInputClaimPercentage

Re-exports [TransferRestrictionInputClaimPercentage](../../interfaces/API/Procedures/Types/TransferRestrictionInputClaimPercentage/TransferRestrictionInputClaimPercentage.md)

___

### TransferRestrictionInputCount

Re-exports [TransferRestrictionInputCount](../../interfaces/API/Procedures/Types/TransferRestrictionInputCount/TransferRestrictionInputCount.md)

___

### TransferRestrictionInputPercentage

Re-exports [TransferRestrictionInputPercentage](../../interfaces/API/Procedures/Types/TransferRestrictionInputPercentage/TransferRestrictionInputPercentage.md)

___

### TransferRestrictionParams

Re-exports [TransferRestrictionParams](../API/Procedures/Types/Types.md#transferrestrictionparams)

___

### TransferRestrictionResult

Re-exports [TransferRestrictionResult](../../interfaces/API/Entities/Asset/Types/TransferRestrictionResult/TransferRestrictionResult.md)

___

### TransferRestrictionStatValues

Re-exports [TransferRestrictionStatValues](../../interfaces/API/Entities/Asset/Types/TransferRestrictionStatValues/TransferRestrictionStatValues.md)

___

### TransferRestrictionType

Re-exports [TransferRestrictionType](../../enums/API/Procedures/Types/TransferRestrictionType/TransferRestrictionType.md)

___

### TransferStatus

Re-exports [TransferStatus](../../enums/API/Entities/Asset/Types/TransferStatus/TransferStatus.md)

___

### TransferTickerOwnershipParams

Re-exports [TransferTickerOwnershipParams](../../interfaces/API/Procedures/Types/TransferTickerOwnershipParams/TransferTickerOwnershipParams.md)

___

### TrustedClaimIssuer

Re-exports [TrustedClaimIssuer](../../interfaces/API/Entities/Types/TrustedClaimIssuer/TrustedClaimIssuer.md)

___

### TrustedFor

Re-exports [TrustedFor](../API/Entities/Types/Types.md#trustedfor)

___

### TxData

Re-exports [TxData](../../interfaces/API/Procedures/Types/TxData/TxData.md)

___

### TxGroup

Re-exports [TxGroup](../../enums/API/Procedures/Types/TxGroup/TxGroup.md)

___

### TxGroupParams

Re-exports [TxGroupParams](../../interfaces/API/Procedures/Types/TxGroupParams/TxGroupParams.md)

___

### UniqueIdentifiers

Re-exports [UniqueIdentifiers](../../interfaces/API/Entities/Asset/Types/UniqueIdentifiers/UniqueIdentifiers.md)

___

### UnlinkChildParams

Re-exports [UnlinkChildParams](../../interfaces/API/Procedures/Types/UnlinkChildParams/UnlinkChildParams.md)

___

### UnscopedClaim

Re-exports [UnscopedClaim](../API/Entities/Types/Types.md#unscopedclaim)

___

### UnsubCallback

Re-exports [UnsubCallback](../API/Entities/Types/Types.md#unsubcallback)

___

### UpdatePolyxBondParams

Re-exports [UpdatePolyxBondParams](../../interfaces/API/Procedures/Types/UpdatePolyxBondParams/UpdatePolyxBondParams.md)

___

### UpdateVenueSignersParams

Re-exports [UpdateVenueSignersParams](../../interfaces/API/Procedures/Types/UpdateVenueSignersParams/UpdateVenueSignersParams.md)

___

### Venue

Re-exports [Venue](../API/Entities/Types/Types.md#venue)

___

### VenueDetails

Re-exports [VenueDetails](../../interfaces/API/Entities/Venue/Types/VenueDetails/VenueDetails.md)

___

### VenueFilteringDetails

Re-exports [VenueFilteringDetails](../../interfaces/API/Entities/Asset/Types/VenueFilteringDetails/VenueFilteringDetails.md)

___

### VenueOwnerRole

Re-exports [VenueOwnerRole](../../interfaces/API/Procedures/Types/VenueOwnerRole/VenueOwnerRole.md)

___

### VenueType

Re-exports [VenueType](../../enums/API/Entities/Venue/Types/VenueType/VenueType.md)

___

### WaivePermissionsParams

Re-exports [WaivePermissionsParams](../../interfaces/API/Procedures/Types/WaivePermissionsParams/WaivePermissionsParams.md)

___

### WithdrawInstructionParams

Re-exports [WithdrawInstructionParams](../API/Procedures/Types/Types.md#withdrawinstructionparams)

## Type Aliases

### MiddlewareScope

Ƭ **MiddlewareScope**: [`Scalars`](Types.md#scalars)[``"JSON"``][``"input"``]

#### Defined in

[middleware/typesV1.ts:9](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fbf6882d0/src/middleware/typesV1.ts#L9)

___

### Scalars

Ƭ **Scalars**: `Object`

All built-in and custom scalars, mapped to their actual values

#### Type declaration

| Name | Type |
| :------ | :------ |
| `BigFloat` | \{ `input`: `any` ; `output`: `any`  } |
| `BigFloat.input` | `any` |
| `BigFloat.output` | `any` |
| `BigInt` | \{ `input`: `any` ; `output`: `any`  } |
| `BigInt.input` | `any` |
| `BigInt.output` | `any` |
| `Boolean` | \{ `input`: `boolean` ; `output`: `boolean`  } |
| `Boolean.input` | `boolean` |
| `Boolean.output` | `boolean` |
| `Cursor` | \{ `input`: `any` ; `output`: `any`  } |
| `Cursor.input` | `any` |
| `Cursor.output` | `any` |
| `Date` | \{ `input`: `any` ; `output`: `any`  } |
| `Date.input` | `any` |
| `Date.output` | `any` |
| `Datetime` | \{ `input`: `any` ; `output`: `any`  } |
| `Datetime.input` | `any` |
| `Datetime.output` | `any` |
| `Float` | \{ `input`: `number` ; `output`: `number`  } |
| `Float.input` | `number` |
| `Float.output` | `number` |
| `ID` | \{ `input`: `string` ; `output`: `string`  } |
| `ID.input` | `string` |
| `ID.output` | `string` |
| `Int` | \{ `input`: `number` ; `output`: `number`  } |
| `Int.input` | `number` |
| `Int.output` | `number` |
| `JSON` | \{ `input`: `any` ; `output`: `any`  } |
| `JSON.input` | `any` |
| `JSON.output` | `any` |
| `String` | \{ `input`: `string` ; `output`: `string`  } |
| `String.input` | `string` |
| `String.output` | `string` |

#### Defined in

[middleware/types.ts:40](https://github.com/PolymeshAssociation/polymesh-sdk/blob/fbf6882d0/src/middleware/types.ts#L40)
